didi.css
/* ... */
.widest,.col.widest{width:100%}
.no-float,.col.no-float{float:none}
.float-right,.col.float-right{float:right}
.no-repeat,.norepeat{background-repeat: no-repeat}
.no-backcolor{background-color:inherit}

.scroll-table { table-layout: fixed}
.scroll-table>thead,.scroll-table>tbody { float:left; width: 100%; display: table}
.scroll-table>tbody { display: block; width: 100%;overflow-y: auto }
.scroll-table>thead>tr,.scroll-table>tbody>tr { width: 100%; display: table-row-group}

